added the sidepanel window flow

--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,13 @@
       "service_worker": "./dist/background.js",
       "type": "module"
     },
+    "content_security_policy": {
+      "extension_pages": "script-src 'self'; object-src 'self'"
+    },
+    "web_accessible_resources": [{
+      "resources": ["public/html/*.html"],
+      "matches": ["<all_urls>"]
+    }],
     "content_scripts": [
         {
           "matches": ["<all_urls>"],
